crates/aion-awl/tests/fixtures/rev2/schema-doors/invalid/import_null_type.awl
//! The imported contract declares a null-typed property; null does not exist in the language.
workflow import_null_type
  input thing: Thing
  outcome done: type Done, route success

type Thing = schema("nullable.schema.json")

type Done { note: String }

worker doors
  action wrap_up(thing: Thing) -> Done

step wrap
  thing |> wrap_up |> route done
